tests/errors/syntax_errors/yield.py
# pylint: disable=missing-function-docstring, missing-module-docstring

def get_one():
    yield 1
